# NeMo_Guardrails_chatbot

./: README.md  check_nemo.py  config.yml  main.py  pyproject.toml  requirements.txt
flows/: input.colang
